[store]: create store and some initial actions

--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Mike Skalandunas <mskalandunas@gmail.com>">
-    <meta name="description" content="Make">
+    <meta name="description" content=".make">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@mskalandunas">
     <meta name="twitter:creator" content="@mskalandunas">
-    <meta name="twitter:title" content="Make">
-    <meta name="twitter:description" content="Make">
+    <meta name="twitter:title" content=".make">
+    <meta name="twitter:description" content=".make">
     <meta name="twitter:domain" content="">
-    <meta property="og:title" content="Make">
-    <meta property="og:description" content="Make">
+    <meta property="og:title" content=".make">
+    <meta property="og:description" content=".make">
     <meta property="og:image:width" content="1113">
     <meta property="og:image:height" content="493">
     <meta property="og:url" content="">
-    <title>Make</title>
+    <title>.make</title>
     <link rel="stylesheet" href="./scss/base.scss">
 </head>
 <body>
